--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
             background-color: #fff;
             border-radius: 8px;
             z-index: 1000;
+            /* 追加: フェードインアニメーション */
+            animation: fadeIn 0.5s ease;
         }
         @media (min-width: 576px) {
             .search-container {
@@ -58,10 +60,14 @@
             padding: 20px;
             z-index: 999;
             display: none;
+            /* 追加: フェードインアニメーション */
+            animation: fadeIn 0.5s ease;
         }
         .result-item {
             padding: 20px;
             border-bottom: 1px solid #e0e0e0;
+            /* 追加: スライドアップアニメーション */
+            animation: fadeInUp 0.5s ease;
         }
         .result-item:last-child {
             border-bottom: none;
@@ -84,6 +90,8 @@
             padding: 15px;
             border-radius: 8px;
             z-index: 1000;
+            /* 追加: フェードインアニメーション */
+            animation: fadeIn 0.5s ease;
         }
         @media (max-width: 575.98px) {
             /* 幅が狭いデバイス向けのスタイル */
@@ -107,6 +115,8 @@
                 display: flex;
                 flex-direction: column;
                 transition: max-height 0.3s ease;
+                /* 追加: スライドアップアニメーション */
+                animation: slideUp 0.5s ease;
             }
             .unified-container.expanded {
                 max-height: 80vh;
@@ -125,6 +135,8 @@
                 flex: 1;
                 overflow-y: auto;
                 padding: 10px 15px 15px 15px;
+                /* 追加: フェードインアニメーション */
+                animation: fadeIn 0.5s ease;
             }
         }
         .chat-messages {
@@ -134,6 +146,8 @@
         }
         .chat-message {
             margin-bottom: 10px;
+            /* 追加: スライドアップアニメーション */
+            animation: fadeInUp 0.5s ease;
         }
         .chat-message.user {
             text-align: right;
@@ -144,6 +158,36 @@
         /* モーダルのオーバーレイを調整 */
         .modal {
             z-index: 2000;
+            /* 追加: フェードインアニメーション */
+            animation: fadeIn 0.5s ease;
+        }
+        /* ボタンのホバー効果 */
+        .btn {
+            transition: transform 0.2s;
+        }
+        .btn:hover {
+            transform: scale(1.05);
+        }
+        /* 入力フィールドのフォーカス効果 */
+        input, textarea {
+            transition: border-color 0.3s, box-shadow 0.3s;
+        }
+        input:focus, textarea:focus {
+            border-color: #007bff;
+            box-shadow: 0 0 5px rgba(0,123,255,0.5);
+        }
+        /* アニメーション定義 */
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
+        @keyframes fadeInUp {
+            from { opacity: 0; transform: translateY(20px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+        @keyframes slideUp {
+            from { transform: translateY(100%); }
+            to { transform: translateY(0); }
         }
     </style>
 </head>
@@ -248,7 +292,7 @@
             <div id="ask-ai-container-mobile" class="chat-container-mobile rounded">
                 <div class="mb-3">
                     <label for="model-select" class="form-label"><h5>Select Model</h5></label>
-                    <select id="model-select" class="form-select">
+                    <select id="model-select-mobile" class="form-select">
                         <option value="">Select a model</option>
                     </select>
                 </div>
